bin_PROGRAMS = hash_test hash_set_test hash_table_test match_test parse_test

hash_test_CFLAGS = -I ../src
hash_test_SOURCES = ../src/lib/util/sha256.c hash-test.c
hash_set_test_CFLAGS = -I ../src
hash_set_test_SOURCES = ../src/lib/util/hash_set.c hash_set-test.c
hash_table_test_CFLAGS = -I ../src
hash_table_test_SOURCES = ../src/lib/util/hash_table.c hash_table-test.c
match_test_CFLAGS = -I ../src
match_test_SOURCES = ../src/lib/util/match.c match-test.c
parse_test_CFLAGS = -I ../src
parse_test_SOURCES = ../src/lib/util/parse.c ../src/lib/util/fields.c parse-test.c
