bin_PROGRAMS = sha256_test array_list_test hash_set_test hash_table_test match_test rpm-test parse_test table_test

sha256_test_CFLAGS = -I ../src
sha256_test_SOURCES = ../src/lib/util/sha256.c sha256-test.c

array_list_test_CFLAGS = -I ../src
array_list_test_SOURCES = ../src/lib/util/array_list.c array_list-test.c

hash_set_test_CFLAGS = -I ../src
hash_set_test_SOURCES = ../src/lib/util/hash_set.c hash_set-test.c

hash_table_test_CFLAGS = -I ../src
hash_table_test_SOURCES = ../src/lib/util/hash_table.c hash_table-test.c

match_test_CFLAGS = -I ../src
match_test_SOURCES = ../src/lib/util/match.c match-test.c

rpm_test_CFLAGS = -I ../src
rpm_test_SOURCES = ../src/lib/util/rpm.c ../src/lib/util/table.c rpm-test.c

parse_test_CFLAGS = -I ../src
parse_test_SOURCES = ../src/lib/util/parse.c ../src/lib/util/field_array.c parse-test.c

table_test_CFLAGS = -I ../src
table_test_SOURCES = ../src/lib/util/table.c table-test.c
